--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="173dp"
-        android:layout_marginTop="330dp"
-        android:layout_marginEnd="104dp"
-        android:layout_marginBottom="382dp"
-        android:text="COMEDME LA POLLA"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="346dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="337dp"
+        android:text="@string/yellow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
