--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradiente"
     tools:context=".Activity_splash_screen">
 
     <ImageView
@@ -13,10 +14,13 @@
         android:layout_marginStart="85dp"
         android:layout_marginTop="189dp"
         android:layout_marginEnd="85dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logob" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/logow" />
 
     <TextView
         android:id="@+id/textView"
@@ -26,6 +30,7 @@
         android:layout_marginTop="109dp"
         android:layout_marginEnd="131dp"
         android:text="Proyecto Realizado por:"
+        android:textColor="#DDFFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -39,6 +44,7 @@
         android:layout_marginEnd="144dp"
         android:layout_marginBottom="25dp"
         android:text=" Rubén Fuentes Santiago Gonzalez Juan Moronta Paula Sowinski David Alejandro"
+        android:textColor="#B7FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
