--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,16 +66,17 @@
             android:textSize="16sp"/>
 
         <Button
+            android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:elevation="5dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/btn_fondo_color"
+            android:elevation="5dp"
             android:text="Iniciar sesión"
             android:textColor="#fff"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
