--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,6 +38,7 @@
             android:paddingTop="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
+            android:text="correo"
             android:textColor="@color/white"
             android:textColorHint="#ccc" />
 
@@ -50,10 +51,12 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/input"
             android:hint="Contraseña"
+            android:inputType="textPassword"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
+            android:text="12345"
             android:textColor="@color/white"
             android:textColorHint="#ccc" />
 
