--- a/app/src/main/res/layout/activity_new_account.xml
+++ b/app/src/main/res/layout/activity_new_account.xml
@@ -1,53 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
     <ImageView
+        android:id="@+id/imageView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/logindiscoapp"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/logindiscoapp" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="#a9000000"
-        android:gravity="center">
+        android:layout_height="match_parent">
 
         <ImageView
-            android:layout_width="234dp"
-            android:layout_height="237dp"
-            android:layout_marginBottom="50dp"
-            android:src="@drawable/logow" />
-
-        <EditText
-            android:id="@+id/nombreUsuario"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/input"
-            android:hint="Nombre de usuario"
-            android:paddingLeft="20dp"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
-            android:textColor="#FFFF"
-            android:textColorHint="#ccc" />
+            android:id="@+id/imageView2"
+            android:layout_width="219dp"
+            android:layout_height="166dp"
+            android:layout_marginStart="96dp"
+            android:layout_marginTop="31dp"
+            android:layout_marginEnd="96dp"
+            android:src="@drawable/logow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/correoReg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="28dp"
             android:background="@drawable/input"
             android:hint="Correo electrónico"
             android:paddingLeft="20dp"
@@ -55,15 +42,34 @@
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
             android:textColor="#FFFF"
-            android:textColorHint="#ccc" />
+            android:textColorHint="#ccc"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+        <EditText
+            android:id="@+id/nombreUsuario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="19dp"
+            android:background="@drawable/input"
+            android:hint="Nombre de usuario"
+            android:paddingLeft="20dp"
+            android:paddingTop="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp"
+            android:textColor="#FFFF"
+            android:textColorHint="#ccc"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/correoReg" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/input"
             android:hint="Contraseña"
             android:paddingLeft="20dp"
@@ -71,15 +77,16 @@
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
             android:textColor="#FFFF"
-            android:textColorHint="#ccc" />
+            android:textColorHint="#ccc"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nombreUsuario" />
 
         <EditText
             android:id="@+id/passwordConfirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="14dp"
             android:background="@drawable/input"
             android:hint="Confirmar contraseña"
             android:paddingLeft="20dp"
@@ -87,50 +94,60 @@
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
             android:textColor="#FFFF"
-            android:textColorHint="#ccc" />
+            android:textColorHint="#ccc"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password" />
 
         <Button
             android:id="@+id/crearCuenta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:elevation="5dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/btn_fondo_color"
+            android:elevation="5dp"
             android:text="Crear cuenta"
             android:textColor="#fff"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/passwordConfirm" />
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginTop="9dp"
+            android:enabled="false"
+            android:gravity="end"
+            android:text="¿Ya tienes cuenta?"
+            android:textColor="#fff"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/crearCuenta" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginBottom="30dp"
-                android:gravity="end"
-                android:text="¿Ya tienes cuenta?"
-                android:textColor="#fff"
-                android:textSize="16sp" />
+        <Button
+            android:id="@+id/atras"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="137dp"
+            android:layout_marginTop="52dp"
+            android:layout_marginEnd="137dp"
+            android:layout_marginBottom="56dp"
+            android:background="@drawable/btn_fondo_color"
+            android:onClick="volverAtras"
+            android:text="   INICIAR SESIÓN   "
+            android:textColor="#fff"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_fondo_color"
-                android:text="   INICIAR SESIÓN   "
-                android:textColor="#fff"
-                android:textSize="16sp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
-
-    </LinearLayout>
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
